# edzespont

./: .gitignore  README.md  edzespont_dev.yml  edzespont_prod.yml
backend/: .gitignore  alembic.ini  dockerfile.dev  main.py  migrate.sh  requirements.txt
backend/alembic/: env.py  how_to_readme
backend/alembic/versions/: 02dd14817bfb_add_failed_login_attempt.py  0d4ba1f55101_remove_testfield.py  1d0165b2fcad_test_add_simple_field.py  232e2601c18d_upd_models.py  3b96d2d87510_init_users.py  3f54d71fe1ba_add_user_and_profile_relation.py  4b7d2e52e588_init.py  704812a66fad_init.py  74a4bb154667_add_city_to_profile.py  8c8cb712b866_add_profile_table_2.py  95448b4b8b55_profile_dates.py  a35e8c9ed856_add_profile_table.py  b4ed7d67bc7e_init.py  e18f52210bf5_add_profiles.py  f9f97a2122ea_add_keyfp_to_user.py
backend/app/: skeleton.md
backend/app/api/: __init__.py  enums.py  tags.py  tests.py  user.py
backend/app/core/: config.py  db.py  lifespan.py  password.py
backend/app/models/: __init__.py  profiles.py  users.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: profile_schema.py  user_schema.py
backend/app/services/: __init__.py  userservice.py
cache/: dockerfile
cache/conf/: redis.conf
db/init/: users.sql
frontend/: dockerfile  dockerfile.dev  package-lock.json
rbe/: Cargo.toml
rbe/src/: lib.rs  main.rs  res.rs
rbe/src/db/: connection.rs  db_struct.txt  user_extractor.txt
rbe/src/res/: config.rs  roommate.rs  roomspectator.rs  structs.rs  user.rs  workout.rs
