[package]
name = "rbe"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3", features = ["v4", "serde"] }
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono"
] }
